<resources>
    <string name="app_name">KetekGo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_or_sign_up_for_free">Login or Sign Up For Free</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="or">or</string>
    <string name="register_here">Register Here</string>
    <string name="register">REGISTER</string>
    <string name="login_here">Login Here</string>
    <string name="username">pak usman</string>
    <string name="profile_photo">profile_photo</string>
    <string name="ketek_photo">ketek_photo</string>
    <string name="ketek_pak_usman">Ketek Pak Usman</string>
    <string name="pulau_a">Pulau A</string>
    <string name="taman_b">Taman B</string>
    <string name="_06_00_wib">06.00 WIB</string>
    <string name="_10_orang">10 Orang</string>
    <string name="_10_000_00">10.000,00</string>
    <string name="rp">Rp</string>
    <string name="loc_icon">loc_icon</string>
    <string name="to_icon">to_icon</string>
    <string name="capacity_icon">capacity_icon</string>
    <string name="time_icon">time_icon</string>
    <string name="destination">destination</string>
    <string name="date">23/01/2002</string>
    <string name="belum_dibayar">BELUM DIBAYAR</string>
    <string name="batalkan">BATALKAN</string>
    <string name="edit">EDIT</string>
    <string name="delete">HAPUS</string>
    <string name="customer">Pemesan :</string>
    <string name="customer_name">AhmadRonaldo</string>
    <string name="checklist_already_pay">TANDAI SUDAH DIBAYAR</string>
    <string name="what_is_in_palembang">Apa Aja di Palembang?</string>
    <string name="want_to_ride_ketek">Mau Naik Ketek?</string>
    <string name="booking_history">Riwayat Pemesanan</string>
    <string name="email_example">pakusmanganteng@mail.com</string>
    <string name="driver">Driver</string>
    <string name="my_ketek">My Ketek</string>
    <string name="example_email">ahmadronaldo123@mail.com</string>
    <string name="customer_role">Costumer</string>
    <string name="my_notification">My Notification</string>
    <string name="upload_image">Upload Image</string>
    <string name="capacity">Kapasitas</string>
    <string name="price">Price</string>
    <string name="time">Time</string>
    <string name="gallery">GALLERY</string>
    <string name="camera">CAMERA</string>
    <string name="upload">UPLOAD</string>
    <string name="booking_detail">Detail Pesanan</string>
    <string name="to">Tujuan</string>
    <string name="go_time">Waktu Berangkat</string>
    <string name="passengers">Penumpang</string>
    <string name="_7">7</string>
    <string name="cancel">BATAL</string>
    <string name="pay">BAYAR 20.000</string>
    <string name="sure_to_book">Yakin Ingin Booking?</string>
    <string name="lokasi">LOKASI</string>
    <string name="perjalanan">PERJALANAN</string>
    <string name="harga">HARGA</string>
    <string name="deskripsi">DESKRIPSI</string>
    <string name="example_description">Pulau yang sangat indah. Menawarkan berbagai macam views yang aestetik coy</string>
    <string name="example_location">Sebelah barat dari Pulau Utama</string>
    <string name="example_travel">Perjalanan menggunakan perahu Ketek, sekitar 30 menit dari Pulau Utama</string>
    <string name="home">Beranda</string>
    <string name="booking">Booking</string>
    <string name="history">Riwayat</string>
    <string name="profile">Profil</string>
    <string name="floating_button">floating_button</string>
    <string name="more">MORE</string>
    <string name="input_your_preferences">Input Your Preferences</string>
    <string name="ask">ASK</string>
    <string name="our_recommendation">Our Recommendation</string>
    <string name="rate_this_destination">Rate This Destination?</string>
    <string name="btnback">btnBack</string>
    <string name="error_message">Error</string>
    <string name="log_out">LOGOUT</string>
    <string name="full_name">Full Name</string>
    <string name="register_as_driver">Register As Driver</string>
    <string name="register_as_costumer">Register As Costumer</string>
    <string name="order">Orderan</string>
    <string name="culinary">KULINER</string>
    <string name="recreation">REKREASI</string>
    <string name="what_do_you_prefer">what do you prefer?</string>
    <string name="culture">BUDAYA</string>
    <string name="shopping">BELANJA</string>
    <string name="submit">SUBMIT</string>
    <string name="skip">SKIP</string>
    <string name="switch_camera">switch camera</string>
    <string name="arrow_back_button">arrow back button</string>
    <string name="capture_image">capture image</string>
    <string name="photo_failed">Photo Failed</string>
    <string name="camera_failed">Camera Failed</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="permission_not_granted">Permission Not Granted</string>
    <string name="name_ketek">Nama Ketek</string>
    <string name="from">Asal</string>

    // DUMMY DATA FOR BOATS//
    <string-array name="data_username">
        <item>pak_usman</item>
        <item>pas_ilham</item>
        <item>pak_ganjar</item>
        <item>pak_prabu</item>
        <item>pak_ismail</item>
    </string-array>

    <integer-array name="data_photo">
        <item>@drawable/kapal1</item>
        <item>@drawable/kapal2</item>
        <item>@drawable/kapal3</item>
        <item>@drawable/kapal4</item>
        <item>@drawable/kapal5</item>
    </integer-array>

    <string-array name="data_name">
        <item>Ketek Pak Usman</item>
        <item>Perahu Sejahtera</item>
        <item>Perahu Pak Ganjar</item>
        <item>Ketek The Boat</item>
        <item>Ketek Nomor 01</item>
    </string-array>

    <string-array name="data_from">
        <item>Pulau A</item>
        <item>Pulau A</item>
        <item>Pulau A</item>
        <item>Pulau A</item>
        <item>Pulau A</item>
    </string-array>

    <string-array name="data_to">
        <item>Pulau B</item>
        <item>Pulau C</item>
        <item>Pulau D</item>
        <item>Pulau E</item>
        <item>Pulau F</item>
    </string-array>

    <string-array name="data_time">
        <item>06.00</item>
        <item>07.00</item>
        <item>09.00</item>
        <item>15.00</item>
        <item>17.00</item>
    </string-array>

    <integer-array name="data_capacity">
        <item>10</item>
        <item>10</item>
        <item>10</item>
        <item>10</item>
        <item>10</item>
    </integer-array>

    <string-array name="data_price">
        <item>20.000</item>
        <item>20.000</item>
        <item>20.000</item>
        <item>20.000</item>
        <item>20.000</item>
    </string-array>

    // DUMMY DATA FOR DESTINATIONS //
    <integer-array name="data_destination_photo">
        <item>@drawable/wisata1</item>
        <item>@drawable/wisata2</item>
        <item>@drawable/wisata3</item>
        <item>@drawable/wisata4</item>
        <item>@drawable/wisata5</item>
        <item>@drawable/wisata6</item>
    </integer-array>

    <string-array name="data_destination_name">
        <item>Pulau Kemaro</item>
        <item>Spring Hill</item>
        <item>Sekanak Sidewalk</item>
        <item>Jembatan Ampera</item>
        <item>Museum Balaputra Dewa</item>
        <item>Bukit Siguntang</item>
    </string-array>

    // DUMMY DATA FOR HISTORY //
    <string-array name="data_history_status">
        <item>SUDAH DIBAYAR</item>
        <item>SUDAH DIBAYAR</item>
        <item>SUDAH DIBAYAR</item>
        <item>SUDAH DIBAYAR</item>
        <item>SUDAH DIBAYAR</item>
    </string-array>

    <string-array name="data_history_date">
        <item>01/03/2024</item>
        <item>02/02/2024</item>
        <item>30/01/2024</item>
        <item>25/01/2024</item>
        <item>23/01/2024</item>
    </string-array>
</resources>