<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.BookingDetailFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/logo_app"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_booking_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/booking_detail"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_app"/>

    <TextView
        android:id="@+id/tv_item_ketek_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ketek_pak_usman"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_booking_detail"/>

    <TextView
        android:id="@+id/tv_item_ketek_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_ketek_name"/>

    <TextView
        android:id="@+id/go_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_time"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_ketek_to"/>

    <TextView
        android:id="@+id/tv_passengers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passengers"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_time"/>

    <View
        android:id="@+id/middle_line"
        android:layout_width="4dp"
        android:layout_height="160dp"
        android:background="@color/main_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_ketek_name"/>

    <TextView
        android:id="@+id/ketek_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pulau_a"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="@id/middle_line"
        app:layout_constraintTop_toBottomOf="@id/tv_item_ketek_name"/>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_06_00_wib"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="@id/middle_line"
        app:layout_constraintTop_toBottomOf="@id/ketek_to"/>

    <EditText
        android:id="@+id/ed_passengers"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:hint="@string/_7"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@id/middle_line"
        app:layout_constraintTop_toBottomOf="@id/tv_time"/>

    <TextView
        android:id="@+id/tv_sure_to_booking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sure_to_book"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/middle_line"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sure_to_booking"
        app:layout_constraintEnd_toStartOf="@id/middle_line"/>

    <Button
        android:id="@+id/btn_pay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pay"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sure_to_booking"
        app:layout_constraintStart_toEndOf="@id/middle_line"/>

    <ProgressBar
        android:id="@+id/progressBarBooking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>