<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.DestinationDetailFragment">

    <ImageView
        android:id="@+id/destination_photo"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/destination"/>

    <TextView
        android:id="@+id/tv_destination_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pulau_a"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="@id/destination_photo"
        app:layout_constraintBottom_toBottomOf="@id/destination_photo"/>

    <TextView
        android:id="@+id/tv_destination_description"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/deskripsi"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/main_blue"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/destination_photo"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_destination_loc"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/lokasi"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/main_blue"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_destination_description"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_destination_travel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/perjalanan"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/main_blue"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_destination_loc"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_destination_price"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/harga"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/main_blue"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_destination_travel"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_detail_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minLines="2"
        android:text="@string/example_description"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_destination_description"
        app:layout_constraintTop_toBottomOf="@id/destination_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_destination_description"/>

    <TextView
        android:id="@+id/tv_detail_loc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minLines="2"
        android:text="@string/example_location"
        app:layout_constraintStart_toEndOf="@id/tv_destination_loc"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_destination_loc"/>

    <TextView
        android:id="@+id/tv_detail_travel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minLines="2"
        android:text="@string/example_travel"
        app:layout_constraintStart_toEndOf="@id/tv_destination_travel"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_loc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_destination_travel"/>

    <TextView
        android:id="@+id/tv_detail_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_10_000_00"
        app:layout_constraintStart_toEndOf="@id/tv_destination_price"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_travel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_destination_price"/>


</androidx.constraintlayout.widget.ConstraintLayout>