<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.driver.UploadFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_uploaded"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/ic_baseline_image"
            android:contentDescription="@string/upload_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/ed_name_ketek"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/name_ketek"
            android:inputType="text"
            android:layout_marginHorizontal="56dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_uploaded"/>

        <EditText
            android:id="@+id/ed_capacity"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/capacity"
            android:inputType="number"
            android:layout_marginHorizontal="56dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_name_ketek"/>

        <EditText
            android:id="@+id/ed_price"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/price"
            android:inputType="text"
            android:layout_marginHorizontal="56dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_capacity"/>

        <EditText
            android:id="@+id/ed_place_start"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/from"
            android:inputType="text"
            android:layout_marginHorizontal="56dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_price"/>

        <EditText
            android:id="@+id/ed_place_end"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/to"
            android:inputType="text"
            android:layout_marginHorizontal="56dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_place_start"/>

        <EditText
            android:id="@+id/ed_time"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/time"
            android:inputType="text"
            android:layout_marginHorizontal="56dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_place_end"/>

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:layout_marginStart="56dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/ed_time"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:layout_marginEnd="56dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/ed_time"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:layout_marginHorizontal="56dp"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@id/ed_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ProgressBar
            android:id="@+id/progress_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>